--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+<meta charset="utf-8" />
 <head>
     <!--- this is an examples --->
     <!--- the script was copied from https://github.com/vasturiano/3d-force-graph/blob/master/example/large-graph/index.html --->
@@ -8,7 +11,7 @@
     }
   </style>
 
-  <script src="https://unpkg.com/3d-force-graph"></script>
+  <script src="//unpkg.com/3d-force-graph"></script>
   <!--  <script src="../../dist/3d-force-graph.js"></script>-->
 </head>
 
@@ -26,3 +29,6 @@
       .nodeLabel(node => `${node.job}: ${node.skills}`);
   </script>
 </body>
+    
+
+</html>
