--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <!--- this is an examples --->
     <!--- the script was copied from https://github.com/vasturiano/3d-force-graph/blob/master/example/large-graph/index.html --->
-    <!--- the main differnce was to change the link "//unpkg.com/3d-force-graph" to "https://unpkg.com/3d-force-graph --->
+   
   <style>
     body {
       margin: 0;
@@ -26,6 +26,7 @@
       .jsonUrl('sample.json')
       .linkColor(`#888888`)
       .nodeAutoColorBy('branch')
+      .backgroundColor("#1e293d")
       .nodeLabel(node => `${node.job}: ${node.skills}`);
   </script>
 </body>
