--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="utf-8" />
+<title>Inferring relatedness among labour skills in data from 1 million Swedish job postings</title>
 <head>
     <!--- this is an examples --->
     <!--- the script was copied from https://github.com/vasturiano/3d-force-graph/blob/master/example/large-graph/index.html --->
